--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 ideas:
 master output on website <ongoing>
 
-move to wsgi server
-proxy error
+create mysql database as separate container
+init db and src in docker-compose
+create network between backend, database, src
+currently, database is located in backend folder (bot will not work)
